# speeder

./: .env.template  README.md  env.yaml  pyproject.toml  setup.py
configs/: clean_to_ffcv_cfg.yaml  global_cfg.yaml  raw_to_clean_cfg.yaml  train_cfg.yaml
notebooks/: hf.ipynb  test.ipynb
overrides/: 1st.yaml  2nd.yaml  grid_search_lr.yaml
sh/: test.sh
speeder/: cinic10.py  data_utils.py  models.py  test.py  torchvision_to_ffcv.py  train.py  train_cifar10.py  train_imgnet.py  train_utils.py  utils.py
speeder/ds_converters/: any_to_clean.py  clean_to_ffcv.py  core.py  download_imagenet.py  mp.py  raw_to_clean.py
speeder/examples/: cifar10_ffcv.py  cifar10_orig.py  train_clean.py  train_ffcv.py
speeder/ray_impl/: ray_data_utils.py  train.py
template/: utils.py
