[tool.poetry]
name = "parallel"
version = "0.1.0"
description = ""
authors = ["Paymon Haddad"]
license = ""
readme = "README.md"
packages = [{include = "template"}]


[tool.poetry.dependencies]
python="~3.10"
urllib3 = "<=2.0"
gymnasium = "0.28.1" # ray rllib requires https://github.com/ray-project/ray/blob/releases/2.9.2/python/setup.py#L304
pandas="~2.1"  # pandas bug with ray https://github.com/ray-project/ray/issues/42842
deepspeed = "~0.12"

ray = { version = "*", extras = ["all"] }

torch = "*"
torchvision = "*"
torchaudio = "*"
scikit-learn = "*"
scipy = "*"
jupyterlab = "*"
wandb = "*"
matplotlib = "*"
seaborn = "*"
hydra-core = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
